# minder-ai

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ai_engines/: __init__.py  digital_advisor.py  face_analyzer.py  health_engine.py  safety_engine.py  voice_analyzer.py
api/: __init__.py
api/middleware/: __init__.py  rate_limiter.py  security.py
api/routers/: __init__.py  ai_advisor.py  auth.py  health.py  matching.py  messages.py  payments.py  reports.py  users.py
api/services/: __init__.py  ai_service.py  matching_service.py  payment_service.py
core/: __init__.py  config.py  database.py  deps.py  security.py
db/: __init__.py  models.py
deploy/: gunicorn.conf.py  nginx.conf
docs/: API.md  ARCHITECTURE.md  BUSINESS_PLAN.md  about.html  contact.html  demo.html  index.html  pitch-deck.html  privacy.html  stories.html
frontend/static/css/: style.css
frontend/templates/: admin.html  monitor.html  terms.html
miniprogram/: app.js  app.json
schemas/: __init__.py
scripts/: __init__.py  init_db.py  seed_data.py
tests/: __init__.py  test_api.py  test_matching.py
